Create kata entity & association with user
