# public/swagger.json
@@ -20,9 +20,9 @@
 			},
 			"KataLevel": {
 				"enum": [
-					"Easy",
+					"Basic",
 					"Medium",
-					"Hard"
+					"High"
 				],
 				"type": "string"
 			},
@@ -37,31 +37,36 @@
 					"level": {
 						"$ref": "#/components/schemas/KataLevel"
 					},
-					"author": {
+					"intents": {
+						"type": "number",
+						"format": "double"
+					},
+					"stars": {
+						"type": "number",
+						"format": "double"
+					},
+					"creator": {
 						"type": "string"
 					},
-					"date": {
-						"type": "string",
-						"format": "date-time"
+					"solution": {
+						"type": "string"
 					},
-					"valoration": {
-						"type": "number",
-						"format": "double"
-					},
-					"peopleWhoRated": {
-						"type": "number",
-						"format": "double"
-					},
-					"chances": {
-						"type": "number",
-						"format": "double"
+					"participants": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
 					}
 				},
 				"required": [
 					"name",
 					"description",
 					"level",
-					"author"
+					"intents",
+					"stars",
+					"creator",
+					"solution",
+					"participants"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -274,7 +279,7 @@
 				"operationId": "GetKatas",
 				"responses": {
 					"200": {
-						"description": "All katas or kata found by ID or Katas by level",
+						"description": "All katas o kata found by ID",
 						"content": {
 							"application/json": {
 								"schema": {}
@@ -282,9 +287,9 @@
 						}
 					}
 				},
-				"description": "Endpoint that retrieves a list of Katas from \"Katas\" collection in DB",
+				"description": "Endpoint that retrieves katas from \"Katas\" Collection in DB",
 				"tags": [
-					"KataController"
+					"KatasController"
 				],
 				"security": [],
 				"parameters": [
@@ -307,53 +312,7 @@
 						}
 					},
 					{
-						"description": "Id of kata to retrieve (optional)",
-						"in": "query",
-						"name": "id",
-						"required": false,
-						"schema": {
-							"type": "string"
-						}
-					},
-					{
-						"description": "level of katas to retrieve (optional)",
-						"in": "query",
-						"name": "level",
-						"required": false,
-						"schema": {
-							"type": "string"
-						}
-					},
-					{
-						"in": "query",
-						"name": "sort",
-						"required": false,
-						"schema": {
-							"type": "string"
-						}
-					}
-				]
-			},
-			"delete": {
-				"operationId": "DeleteKata",
-				"responses": {
-					"200": {
-						"description": "message informing if kata was deleted successfully",
-						"content": {
-							"application/json": {
-								"schema": {}
-							}
-						}
-					}
-				},
-				"description": "Endpoint that deletes a Kata by ID from \"Katas\" collection in DB",
-				"tags": [
-					"KataController"
-				],
-				"security": [],
-				"parameters": [
-					{
-						"description": "Id of a kata to delete (optional)",
+						"description": "Id of Kata to retrieve (optional)",
 						"in": "query",
 						"name": "id",
 						"required": false,
@@ -367,7 +326,7 @@
 				"operationId": "CreateKata",
 				"responses": {
 					"200": {
-						"description": "message informing if kata was created successfully",
+						"description": "Ok",
 						"content": {
 							"application/json": {
 								"schema": {}
@@ -375,30 +334,27 @@
 						}
 					}
 				},
-				"description": "Endpoint to create a new Kata",
 				"tags": [
-					"KataController"
+					"KatasController"
 				],
 				"security": [],
 				"parameters": [],
 				"requestBody": {
-					"description": "data to create a new Kata",
 					"required": true,
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/IKata",
-								"description": "data to create a new Kata"
+								"$ref": "#/components/schemas/IKata"
 							}
 						}
 					}
 				}
 			},
-			"put": {
-				"operationId": "UpdateKata",
+			"delete": {
+				"operationId": "DeleteKata",
 				"responses": {
 					"200": {
-						"description": "message informing if kata was updated successfully",
+						"description": "message informing if deletion was correct",
 						"content": {
 							"application/json": {
 								"schema": {}
@@ -406,14 +362,41 @@
 						}
 					}
 				},
-				"description": "Endpoint that updates a Kata by ID from \"Katas\" collection in DB",
+				"description": "Endpoint to delete the Katas in the Collection \"Katas\" of DB",
 				"tags": [
-					"KataController"
+					"KatasController"
 				],
 				"security": [],
 				"parameters": [
 					{
-						"description": "Id of kata to update",
+						"description": "Id of Kata to delete (optional)",
+						"in": "query",
+						"name": "id",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			},
+			"put": {
+				"operationId": "UpdateKata",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"KatasController"
+				],
+				"security": [],
+				"parameters": [
+					{
 						"in": "query",
 						"name": "id",
 						"required": true,
@@ -423,56 +406,11 @@
 					}
 				],
 				"requestBody": {
-					"description": "kata data to update",
 					"required": true,
 					"content": {
 						"application/json": {
 							"schema": {
-								"description": "kata data to update"
-							}
-						}
-					}
-				}
-			}
-		},
-		"/api/katas/{id}": {
-			"put": {
-				"operationId": "RateKata",
-				"responses": {
-					"200": {
-						"description": "message informing if kata was rated successfully",
-						"content": {
-							"application/json": {
-								"schema": {}
-							}
-						}
-					}
-				},
-				"description": "Endpoint that rates a Kata by passing an ID from \"Katas\" collection in DB",
-				"tags": [
-					"KataController"
-				],
-				"security": [],
-				"parameters": [
-					{
-						"description": "Id of kata to rate",
-						"in": "path",
-						"name": "id",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					}
-				],
-				"requestBody": {
-					"description": "number to rate a kata",
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"type": "number",
-								"format": "double",
-								"description": "number to rate a kata"
+								"$ref": "#/components/schemas/IKata"
 							}
 						}
 					}
