# src/domain/entities/Kata.entity.ts
@@ -1,35 +1,17 @@
 import mongoose from 'mongoose';
+import { IKata } from '../interfaces/IKata.interface';
 
 export const kataEntity = () => {
-  const kataSchema = new mongoose.Schema({
+  const kataSchema = new mongoose.Schema<IKata>({
     name: { type: String, required: true },
     description: { type: String, required: true },
-    level: {
-      type: String,
-      enum: ['Easy', 'Medium', 'Hard'],
-      required: true,
-    },
-    author: {
-      type: mongoose.Schema.Types.ObjectId,
-      ref: 'User',
-      required: true,
-    },
-    date: { type: Date, default: Date.now },
-    valoration: {
-      type: Number,
-      min: [1, 'The minimum valoration is 1'],
-      max: [5, 'The maximum valoration is 5'],
-      default: 1,
-    },
-    peopleWhoRated: {
-      type: Number,
-      default: 0,
-    },
-    chances: {
-      type: Number,
-      default: 0,
-    },
+    level: { type: String, required: true },
+    intents: { type: Number, required: true },
+    stars: { type: Number, required: true },
+    creator: { type: String, required: true },
+    solution: { type: String, required: true },
+    participants: { type: [], required: true },
   });
 
-  return mongoose.models.Kata || mongoose.model('Kata', kataSchema);
+  return mongoose.models.Kata || mongoose.model<IKata>('Kata', kataSchema);
 };
