# src/routes/UserRouter.ts
@@ -61,6 +61,22 @@ userRouter
     return res.status(200).send(response);
   });
 
+userRouter.route('/katas').get(async (req: Request, res: Response) => {
+  // Obtain a Query Param (ID)
+  const id: any = req?.query?.id;
+
+  // Pagination
+  const page: any = req?.query?.page || 1;
+  const limit: any = req?.query?.limit || 10;
+
+  // Controller Instance to excute method
+  const controller: UserController = new UserController();
+  // Obtain Reponse
+  const response: any = await controller.getKatas(page, limit, id);
+  // Send to the client the response
+  return res.status(200).send(response);
+});
+
 // Export User Router
 export default userRouter;
 
